--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 
-    <header>ALURAFLIX</header>
+    <header>Gabrielflix</header>
 
     <section class="chamada">
         <div class="chamada-texto">
